# ocremix-data

./: Dockerfile  README.md  build-pages.py  common.py  compose.yaml  gen-openapi-spec.py  generate_json.py  import_ocr.py  ocremix-data.openapi.json  ocremix-data.sql  ocremixdata.py  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: build-container-image.yaml  github-pages.yaml  import-missing.yaml  ruff.yaml  update.yaml
ci/: build-pages.sh  commit-and-push.sh  gen-openapi-spec.sh  gen.py  import-missing.sh
output/: index.html  ocremix-data.openapi.json
output/remix/: OCR00001.json  OCR00002.json  OCR00003.json  OCR00004.json  OCR00005.json  OCR00006.json  OCR00007.json  OCR00008.json  OCR00009.json  OCR00010.json  OCR00011.json  OCR00012.json  OCR00013.json  OCR00014.json  OCR00015.json  OCR00019.json  OCR00021.json  OCR00022.json  OCR00026.json  OCR00028.json  OCR00029.json  OCR00030.json  OCR00034.json  OCR00035.json  OCR00037.json  OCR00040.json  OCR00041.json  OCR00042.json  OCR00044.json  OCR00045.json  OCR00046.json  OCR00048.json  OCR00050.json  OCR00053.json  OCR00054.json  OCR00055.json  OCR00058.json  OCR00059.json  OCR00060.json  OCR00061.json  (+4394 more)
