[project]
name = "ocremix-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "htpy>=25.10.0",
    "lxml>=6.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
